@@ -1,4 +1,5 @@
-#line 1 "http11_parser.rl"
+
+#line 1 "ext/http11/http11_parser.rl"
 /**
  * Copyright (c) 2005 Zed A. Shaw
  * You can redistribute it and/or modify it under the same terms as Ruby.
@@ -16,28 +17,31 @@
 
 /** Machine **/
 
-#line 74 "http11_parser.rl"
+
+#line 75 "ext/http11/http11_parser.rl"
 
 
 /** Data **/
 
-#line 25 "http11_parser.c"
+#line 27 "ext/http11/http11_parser.c"
 static const int http_parser_start = 1;
 static const int http_parser_first_final = 57;
 static const int http_parser_error = 0;
 
 static const int http_parser_en_main = 1;
 
-#line 78 "http11_parser.rl"
+
+#line 79 "ext/http11/http11_parser.rl"
 
 int http_parser_init(http_parser *parser)  {
   int cs = 0;
   
-#line 37 "http11_parser.c"
+#line 40 "ext/http11/http11_parser.c"
 	{
 	cs = http_parser_start;
 	}
-#line 82 "http11_parser.rl"
+
+#line 83 "ext/http11/http11_parser.rl"
   parser->cs = cs;
   parser->body_start = 0;
   parser->content_len = 0;
@@ -63,12 +67,11 @@ size_t http_parser_execute(http_parser *parser, const char *buffer, size_t len, 
   assert(*pe == '\0' && "pointer does not end on NUL");
   assert(pe - p == len - off && "pointers aren't same distance");
 
-
   
-#line 69 "http11_parser.c"
+#line 72 "ext/http11/http11_parser.c"
 	{
 	if ( p == pe )
-		goto _out;
+		goto _test_eof;
 	switch ( cs )
 	{
 case 1:
@@ -86,16 +89,17 @@ case 1:
 		goto tr0;
 	goto st0;
 st0:
-	goto _out0;
+cs = 0;
+	goto _out;
 tr0:
-#line 22 "http11_parser.rl"
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st2;
 st2:
 	if ( ++p == pe )
-		goto _out2;
+		goto _test_eof2;
 case 2:
-#line 99 "http11_parser.c"
+#line 103 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 32: goto tr2;
 		case 36: goto st38;
@@ -111,7 +115,7 @@ case 2:
 		goto st38;
 	goto st0;
 tr2:
-#line 36 "http11_parser.rl"
+#line 37 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_method != NULL) 
       parser->request_method(parser->data, PTR_TO(mark), LEN(mark, p));
@@ -119,9 +123,9 @@ tr2:
 	goto st3;
 st3:
 	if ( ++p == pe )
-		goto _out3;
+		goto _test_eof3;
 case 3:
-#line 125 "http11_parser.c"
+#line 129 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 42: goto tr4;
 		case 43: goto tr5;
@@ -138,66 +142,75 @@ case 3:
 		goto tr5;
 	goto st0;
 tr4:
-#line 22 "http11_parser.rl"
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st4;
 st4:
 	if ( ++p == pe )
-		goto _out4;
+		goto _test_eof4;
 case 4:
-#line 149 "http11_parser.c"
+#line 153 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 32: goto tr8;
 		case 35: goto tr9;
 	}
 	goto st0;
 tr8:
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st5;
-tr30:
-#line 44 "http11_parser.rl"
-	{ 
+tr31:
+#line 22 "ext/http11/http11_parser.rl"
+	{MARK(mark, p); }
+#line 45 "ext/http11/http11_parser.rl"
+	{
     if(parser->fragment != NULL)
       parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st5;
-tr40:
-#line 60 "http11_parser.rl"
+tr34:
+#line 45 "ext/http11/http11_parser.rl"
+	{
+    if(parser->fragment != NULL)
+      parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
+  }
+	goto st5;
+tr42:
+#line 61 "ext/http11/http11_parser.rl"
 	{
     if(parser->request_path != NULL)
       parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
   }
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st5;
-tr51:
-#line 49 "http11_parser.rl"
+tr53:
+#line 50 "ext/http11/http11_parser.rl"
 	{MARK(query_start, p); }
-#line 50 "http11_parser.rl"
+#line 51 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->query_string != NULL)
       parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
   }
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st5;
-tr55:
-#line 50 "http11_parser.rl"
+tr57:
+#line 51 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->query_string != NULL)
       parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
   }
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
@@ -205,55 +218,55 @@ tr55:
 	goto st5;
 st5:
 	if ( ++p == pe )
-		goto _out5;
+		goto _test_eof5;
 case 5:
-#line 211 "http11_parser.c"
+#line 224 "ext/http11/http11_parser.c"
 	if ( (*p) == 72 )
 		goto tr10;
 	goto st0;
 tr10:
-#line 22 "http11_parser.rl"
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st6;
 st6:
 	if ( ++p == pe )
-		goto _out6;
+		goto _test_eof6;
 case 6:
-#line 223 "http11_parser.c"
+#line 236 "ext/http11/http11_parser.c"
 	if ( (*p) == 84 )
 		goto st7;
 	goto st0;
 st7:
 	if ( ++p == pe )
-		goto _out7;
+		goto _test_eof7;
 case 7:
 	if ( (*p) == 84 )
 		goto st8;
 	goto st0;
 st8:
 	if ( ++p == pe )
-		goto _out8;
+		goto _test_eof8;
 case 8:
 	if ( (*p) == 80 )
 		goto st9;
 	goto st0;
 st9:
 	if ( ++p == pe )
-		goto _out9;
+		goto _test_eof9;
 case 9:
 	if ( (*p) == 47 )
 		goto st10;
 	goto st0;
 st10:
 	if ( ++p == pe )
-		goto _out10;
+		goto _test_eof10;
 case 10:
 	if ( 48 <= (*p) && (*p) <= 57 )
 		goto st11;
 	goto st0;
 st11:
 	if ( ++p == pe )
-		goto _out11;
+		goto _test_eof11;
 case 11:
 	if ( (*p) == 46 )
 		goto st12;
@@ -262,14 +275,14 @@ case 11:
 	goto st0;
 st12:
 	if ( ++p == pe )
-		goto _out12;
+		goto _test_eof12;
 case 12:
 	if ( 48 <= (*p) && (*p) <= 57 )
 		goto st13;
 	goto st0;
 st13:
 	if ( ++p == pe )
-		goto _out13;
+		goto _test_eof13;
 case 13:
 	if ( (*p) == 13 )
 		goto tr18;
@@ -277,15 +290,25 @@ case 13:
 		goto st13;
 	goto st0;
 tr18:
-#line 55 "http11_parser.rl"
+#line 56 "ext/http11/http11_parser.rl"
 	{	
     if(parser->http_version != NULL)
       parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st14;
 tr26:
-#line 31 "http11_parser.rl"
-	{ 
+#line 31 "ext/http11/http11_parser.rl"
+	{ MARK(mark, p); }
+#line 32 "ext/http11/http11_parser.rl"
+	{
+    if(parser->http_field != NULL) {
+      parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
+    }
+  }
+	goto st14;
+tr29:
+#line 32 "ext/http11/http11_parser.rl"
+	{
     if(parser->http_field != NULL) {
       parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
     }
@@ -293,15 +316,15 @@ tr26:
 	goto st14;
 st14:
 	if ( ++p == pe )
-		goto _out14;
+		goto _test_eof14;
 case 14:
-#line 299 "http11_parser.c"
+#line 322 "ext/http11/http11_parser.c"
 	if ( (*p) == 10 )
 		goto st15;
 	goto st0;
 st15:
 	if ( ++p == pe )
-		goto _out15;
+		goto _test_eof15;
 case 15:
 	switch( (*p) ) {
 		case 13: goto st16;
@@ -329,35 +352,35 @@ case 15:
 	goto st0;
 st16:
 	if ( ++p == pe )
-		goto _out16;
+		goto _test_eof16;
 case 16:
 	if ( (*p) == 10 )
 		goto tr22;
 	goto st0;
 tr22:
-#line 65 "http11_parser.rl"
+#line 66 "ext/http11/http11_parser.rl"
 	{ 
     parser->body_start = p - buffer + 1; 
     if(parser->header_done != NULL)
       parser->header_done(parser->data, p + 1, pe - p - 1);
-    goto _out57;
+    {p++; cs = 57; goto _out;}
   }
 	goto st57;
 st57:
 	if ( ++p == pe )
-		goto _out57;
+		goto _test_eof57;
 case 57:
-#line 351 "http11_parser.c"
+#line 374 "ext/http11/http11_parser.c"
 	goto st0;
 tr21:
-#line 25 "http11_parser.rl"
+#line 25 "ext/http11/http11_parser.rl"
 	{ MARK(field_start, p); }
 	goto st17;
 st17:
 	if ( ++p == pe )
-		goto _out17;
+		goto _test_eof17;
 case 17:
-#line 361 "http11_parser.c"
+#line 384 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 33: goto st17;
 		case 58: goto tr24;
@@ -383,77 +406,77 @@ case 17:
 		goto st17;
 	goto st0;
 tr24:
-#line 26 "http11_parser.rl"
+#line 27 "ext/http11/http11_parser.rl"
 	{ 
     parser->field_len = LEN(field_start, p);
   }
 	goto st18;
 tr27:
-#line 30 "http11_parser.rl"
+#line 31 "ext/http11/http11_parser.rl"
 	{ MARK(mark, p); }
 	goto st18;
 st18:
 	if ( ++p == pe )
-		goto _out18;
+		goto _test_eof18;
 case 18:
-#line 400 "http11_parser.c"
+#line 423 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 13: goto tr26;
 		case 32: goto tr27;
 	}
 	goto tr25;
 tr25:
-#line 30 "http11_parser.rl"
+#line 31 "ext/http11/http11_parser.rl"
 	{ MARK(mark, p); }
 	goto st19;
 st19:
 	if ( ++p == pe )
-		goto _out19;
+		goto _test_eof19;
 case 19:
-#line 414 "http11_parser.c"
+#line 437 "ext/http11/http11_parser.c"
 	if ( (*p) == 13 )
-		goto tr26;
+		goto tr29;
 	goto st19;
 tr9:
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st20;
-tr41:
-#line 60 "http11_parser.rl"
+tr43:
+#line 61 "ext/http11/http11_parser.rl"
 	{
     if(parser->request_path != NULL)
       parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
   }
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st20;
-tr52:
-#line 49 "http11_parser.rl"
+tr54:
+#line 50 "ext/http11/http11_parser.rl"
 	{MARK(query_start, p); }
-#line 50 "http11_parser.rl"
+#line 51 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->query_string != NULL)
       parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
   }
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
   }
 	goto st20;
-tr56:
-#line 50 "http11_parser.rl"
+tr58:
+#line 51 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->query_string != NULL)
       parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
   }
-#line 40 "http11_parser.rl"
+#line 41 "ext/http11/http11_parser.rl"
 	{ 
     if(parser->request_uri != NULL)
       parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
@@ -461,12 +484,12 @@ tr56:
 	goto st20;
 st20:
 	if ( ++p == pe )
-		goto _out20;
+		goto _test_eof20;
 case 20:
-#line 467 "http11_parser.c"
+#line 490 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
-		case 32: goto tr30;
-		case 37: goto tr31;
+		case 32: goto tr31;
+		case 37: goto tr32;
 		case 60: goto st0;
 		case 62: goto st0;
 		case 127: goto st0;
@@ -476,18 +499,18 @@ case 20:
 			goto st0;
 	} else if ( (*p) >= 0 )
 		goto st0;
-	goto tr29;
-tr29:
-#line 22 "http11_parser.rl"
+	goto tr30;
+tr30:
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st21;
 st21:
 	if ( ++p == pe )
-		goto _out21;
+		goto _test_eof21;
 case 21:
-#line 489 "http11_parser.c"
+#line 512 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
-		case 32: goto tr30;
+		case 32: goto tr34;
 		case 37: goto st22;
 		case 60: goto st0;
 		case 62: goto st0;
@@ -499,15 +522,15 @@ case 21:
 	} else if ( (*p) >= 0 )
 		goto st0;
 	goto st21;
-tr31:
-#line 22 "http11_parser.rl"
+tr32:
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st22;
 st22:
 	if ( ++p == pe )
-		goto _out22;
+		goto _test_eof22;
 case 22:
-#line 511 "http11_parser.c"
+#line 534 "ext/http11/http11_parser.c"
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
 			goto st23;
@@ -519,7 +542,7 @@ case 22:
 	goto st0;
 st23:
 	if ( ++p == pe )
-		goto _out23;
+		goto _test_eof23;
 case 23:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -531,14 +554,14 @@ case 23:
 		goto st21;
 	goto st0;
 tr5:
-#line 22 "http11_parser.rl"
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st24;
 st24:
 	if ( ++p == pe )
-		goto _out24;
+		goto _test_eof24;
 case 24:
-#line 542 "http11_parser.c"
+#line 565 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 43: goto st24;
 		case 58: goto st25;
@@ -556,14 +579,14 @@ case 24:
 		goto st24;
 	goto st0;
 tr7:
-#line 22 "http11_parser.rl"
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st25;
 st25:
 	if ( ++p == pe )
-		goto _out25;
+		goto _test_eof25;
 case 25:
-#line 567 "http11_parser.c"
+#line 590 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 32: goto tr8;
 		case 34: goto st0;
@@ -578,7 +601,7 @@ case 25:
 	goto st25;
 st26:
 	if ( ++p == pe )
-		goto _out26;
+		goto _test_eof26;
 case 26:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -591,7 +614,7 @@ case 26:
 	goto st0;
 st27:
 	if ( ++p == pe )
-		goto _out27;
+		goto _test_eof27;
 case 27:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -603,23 +626,23 @@ case 27:
 		goto st25;
 	goto st0;
 tr6:
-#line 22 "http11_parser.rl"
+#line 22 "ext/http11/http11_parser.rl"
 	{MARK(mark, p); }
 	goto st28;
 st28:
 	if ( ++p == pe )
-		goto _out28;
+		goto _test_eof28;
 case 28:
-#line 614 "http11_parser.c"
+#line 637 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
-		case 32: goto tr40;
+		case 32: goto tr42;
 		case 34: goto st0;
-		case 35: goto tr41;
+		case 35: goto tr43;
 		case 37: goto st29;
-		case 59: goto tr43;
+		case 59: goto tr45;
 		case 60: goto st0;
 		case 62: goto st0;
-		case 63: goto tr44;
+		case 63: goto tr46;
 		case 127: goto st0;
 	}
 	if ( 0 <= (*p) && (*p) <= 31 )
@@ -627,7 +650,7 @@ case 28:
 	goto st28;
 st29:
 	if ( ++p == pe )
-		goto _out29;
+		goto _test_eof29;
 case 29:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -640,7 +663,7 @@ case 29:
 	goto st0;
 st30:
 	if ( ++p == pe )
-		goto _out30;
+		goto _test_eof30;
 case 30:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -651,8 +674,8 @@ case 30:
 	} else
 		goto st28;
 	goto st0;
-tr43:
-#line 60 "http11_parser.rl"
+tr45:
+#line 61 "ext/http11/http11_parser.rl"
 	{
     if(parser->request_path != NULL)
       parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
@@ -660,9 +683,9 @@ tr43:
 	goto st31;
 st31:
 	if ( ++p == pe )
-		goto _out31;
+		goto _test_eof31;
 case 31:
-#line 666 "http11_parser.c"
+#line 689 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
 		case 32: goto tr8;
 		case 34: goto st0;
@@ -678,7 +701,7 @@ case 31:
 	goto st31;
 st32:
 	if ( ++p == pe )
-		goto _out32;
+		goto _test_eof32;
 case 32:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -691,7 +714,7 @@ case 32:
 	goto st0;
 st33:
 	if ( ++p == pe )
-		goto _out33;
+		goto _test_eof33;
 case 33:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -702,8 +725,8 @@ case 33:
 	} else
 		goto st31;
 	goto st0;
-tr44:
-#line 60 "http11_parser.rl"
+tr46:
+#line 61 "ext/http11/http11_parser.rl"
 	{
     if(parser->request_path != NULL)
       parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
@@ -711,34 +734,34 @@ tr44:
 	goto st34;
 st34:
 	if ( ++p == pe )
-		goto _out34;
+		goto _test_eof34;
 case 34:
-#line 717 "http11_parser.c"
+#line 740 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
-		case 32: goto tr51;
+		case 32: goto tr53;
 		case 34: goto st0;
-		case 35: goto tr52;
-		case 37: goto tr53;
+		case 35: goto tr54;
+		case 37: goto tr55;
 		case 60: goto st0;
 		case 62: goto st0;
 		case 127: goto st0;
 	}
 	if ( 0 <= (*p) && (*p) <= 31 )
 		goto st0;
-	goto tr50;
-tr50:
-#line 49 "http11_parser.rl"
+	goto tr52;
+tr52:
+#line 50 "ext/http11/http11_parser.rl"
 	{MARK(query_start, p); }
 	goto st35;
 st35:
 	if ( ++p == pe )
-		goto _out35;
+		goto _test_eof35;
 case 35:
-#line 738 "http11_parser.c"
+#line 761 "ext/http11/http11_parser.c"
 	switch( (*p) ) {
-		case 32: goto tr55;
+		case 32: goto tr57;
 		case 34: goto st0;
-		case 35: goto tr56;
+		case 35: goto tr58;
 		case 37: goto st36;
 		case 60: goto st0;
 		case 62: goto st0;
@@ -747,15 +770,15 @@ case 35:
 	if ( 0 <= (*p) && (*p) <= 31 )
 		goto st0;
 	goto st35;
-tr53:
-#line 49 "http11_parser.rl"
+tr55:
+#line 50 "ext/http11/http11_parser.rl"
 	{MARK(query_start, p); }
 	goto st36;
 st36:
 	if ( ++p == pe )
-		goto _out36;
+		goto _test_eof36;
 case 36:
-#line 759 "http11_parser.c"
+#line 782 "ext/http11/http11_parser.c"
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
 			goto st37;
@@ -767,7 +790,7 @@ case 36:
 	goto st0;
 st37:
 	if ( ++p == pe )
-		goto _out37;
+		goto _test_eof37;
 case 37:
 	if ( (*p) < 65 ) {
 		if ( 48 <= (*p) && (*p) <= 57 )
@@ -780,7 +803,7 @@ case 37:
 	goto st0;
 st38:
 	if ( ++p == pe )
-		goto _out38;
+		goto _test_eof38;
 case 38:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -798,7 +821,7 @@ case 38:
 	goto st0;
 st39:
 	if ( ++p == pe )
-		goto _out39;
+		goto _test_eof39;
 case 39:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -816,7 +839,7 @@ case 39:
 	goto st0;
 st40:
 	if ( ++p == pe )
-		goto _out40;
+		goto _test_eof40;
 case 40:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -834,7 +857,7 @@ case 40:
 	goto st0;
 st41:
 	if ( ++p == pe )
-		goto _out41;
+		goto _test_eof41;
 case 41:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -852,7 +875,7 @@ case 41:
 	goto st0;
 st42:
 	if ( ++p == pe )
-		goto _out42;
+		goto _test_eof42;
 case 42:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -870,7 +893,7 @@ case 42:
 	goto st0;
 st43:
 	if ( ++p == pe )
-		goto _out43;
+		goto _test_eof43;
 case 43:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -888,7 +911,7 @@ case 43:
 	goto st0;
 st44:
 	if ( ++p == pe )
-		goto _out44;
+		goto _test_eof44;
 case 44:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -906,7 +929,7 @@ case 44:
 	goto st0;
 st45:
 	if ( ++p == pe )
-		goto _out45;
+		goto _test_eof45;
 case 45:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -924,7 +947,7 @@ case 45:
 	goto st0;
 st46:
 	if ( ++p == pe )
-		goto _out46;
+		goto _test_eof46;
 case 46:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -942,7 +965,7 @@ case 46:
 	goto st0;
 st47:
 	if ( ++p == pe )
-		goto _out47;
+		goto _test_eof47;
 case 47:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -960,7 +983,7 @@ case 47:
 	goto st0;
 st48:
 	if ( ++p == pe )
-		goto _out48;
+		goto _test_eof48;
 case 48:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -978,7 +1001,7 @@ case 48:
 	goto st0;
 st49:
 	if ( ++p == pe )
-		goto _out49;
+		goto _test_eof49;
 case 49:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -996,7 +1019,7 @@ case 49:
 	goto st0;
 st50:
 	if ( ++p == pe )
-		goto _out50;
+		goto _test_eof50;
 case 50:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -1014,7 +1037,7 @@ case 50:
 	goto st0;
 st51:
 	if ( ++p == pe )
-		goto _out51;
+		goto _test_eof51;
 case 51:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -1032,7 +1055,7 @@ case 51:
 	goto st0;
 st52:
 	if ( ++p == pe )
-		goto _out52;
+		goto _test_eof52;
 case 52:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -1050,7 +1073,7 @@ case 52:
 	goto st0;
 st53:
 	if ( ++p == pe )
-		goto _out53;
+		goto _test_eof53;
 case 53:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -1068,7 +1091,7 @@ case 53:
 	goto st0;
 st54:
 	if ( ++p == pe )
-		goto _out54;
+		goto _test_eof54;
 case 54:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -1086,7 +1109,7 @@ case 54:
 	goto st0;
 st55:
 	if ( ++p == pe )
-		goto _out55;
+		goto _test_eof55;
 case 55:
 	switch( (*p) ) {
 		case 32: goto tr2;
@@ -1104,75 +1127,77 @@ case 55:
 	goto st0;
 st56:
 	if ( ++p == pe )
-		goto _out56;
+		goto _test_eof56;
 case 56:
 	if ( (*p) == 32 )
 		goto tr2;
 	goto st0;
 	}
-	_out0: cs = 0; goto _out; 
-	_out2: cs = 2; goto _out; 
-	_out3: cs = 3; goto _out; 
-	_out4: cs = 4; goto _out; 
-	_out5: cs = 5; goto _out; 
-	_out6: cs = 6; goto _out; 
-	_out7: cs = 7; goto _out; 
-	_out8: cs = 8; goto _out; 
-	_out9: cs = 9; goto _out; 
-	_out10: cs = 10; goto _out; 
-	_out11: cs = 11; goto _out; 
-	_out12: cs = 12; goto _out; 
-	_out13: cs = 13; goto _out; 
-	_out14: cs = 14; goto _out; 
-	_out15: cs = 15; goto _out; 
-	_out16: cs = 16; goto _out; 
-	_out57: cs = 57; goto _out; 
-	_out17: cs = 17; goto _out; 
-	_out18: cs = 18; goto _out; 
-	_out19: cs = 19; goto _out; 
-	_out20: cs = 20; goto _out; 
-	_out21: cs = 21; goto _out; 
-	_out22: cs = 22; goto _out; 
-	_out23: cs = 23; goto _out; 
-	_out24: cs = 24; goto _out; 
-	_out25: cs = 25; goto _out; 
-	_out26: cs = 26; goto _out; 
-	_out27: cs = 27; goto _out; 
-	_out28: cs = 28; goto _out; 
-	_out29: cs = 29; goto _out; 
-	_out30: cs = 30; goto _out; 
-	_out31: cs = 31; goto _out; 
-	_out32: cs = 32; goto _out; 
-	_out33: cs = 33; goto _out; 
-	_out34: cs = 34; goto _out; 
-	_out35: cs = 35; goto _out; 
-	_out36: cs = 36; goto _out; 
-	_out37: cs = 37; goto _out; 
-	_out38: cs = 38; goto _out; 
-	_out39: cs = 39; goto _out; 
-	_out40: cs = 40; goto _out; 
-	_out41: cs = 41; goto _out; 
-	_out42: cs = 42; goto _out; 
-	_out43: cs = 43; goto _out; 
-	_out44: cs = 44; goto _out; 
-	_out45: cs = 45; goto _out; 
-	_out46: cs = 46; goto _out; 
-	_out47: cs = 47; goto _out; 
-	_out48: cs = 48; goto _out; 
-	_out49: cs = 49; goto _out; 
-	_out50: cs = 50; goto _out; 
-	_out51: cs = 51; goto _out; 
-	_out52: cs = 52; goto _out; 
-	_out53: cs = 53; goto _out; 
-	_out54: cs = 54; goto _out; 
-	_out55: cs = 55; goto _out; 
-	_out56: cs = 56; goto _out; 
+	_test_eof2: cs = 2; goto _test_eof; 
+	_test_eof3: cs = 3; goto _test_eof; 
+	_test_eof4: cs = 4; goto _test_eof; 
+	_test_eof5: cs = 5; goto _test_eof; 
+	_test_eof6: cs = 6; goto _test_eof; 
+	_test_eof7: cs = 7; goto _test_eof; 
+	_test_eof8: cs = 8; goto _test_eof; 
+	_test_eof9: cs = 9; goto _test_eof; 
+	_test_eof10: cs = 10; goto _test_eof; 
+	_test_eof11: cs = 11; goto _test_eof; 
+	_test_eof12: cs = 12; goto _test_eof; 
+	_test_eof13: cs = 13; goto _test_eof; 
+	_test_eof14: cs = 14; goto _test_eof; 
+	_test_eof15: cs = 15; goto _test_eof; 
+	_test_eof16: cs = 16; goto _test_eof; 
+	_test_eof57: cs = 57; goto _test_eof; 
+	_test_eof17: cs = 17; goto _test_eof; 
+	_test_eof18: cs = 18; goto _test_eof; 
+	_test_eof19: cs = 19; goto _test_eof; 
+	_test_eof20: cs = 20; goto _test_eof; 
+	_test_eof21: cs = 21; goto _test_eof; 
+	_test_eof22: cs = 22; goto _test_eof; 
+	_test_eof23: cs = 23; goto _test_eof; 
+	_test_eof24: cs = 24; goto _test_eof; 
+	_test_eof25: cs = 25; goto _test_eof; 
+	_test_eof26: cs = 26; goto _test_eof; 
+	_test_eof27: cs = 27; goto _test_eof; 
+	_test_eof28: cs = 28; goto _test_eof; 
+	_test_eof29: cs = 29; goto _test_eof; 
+	_test_eof30: cs = 30; goto _test_eof; 
+	_test_eof31: cs = 31; goto _test_eof; 
+	_test_eof32: cs = 32; goto _test_eof; 
+	_test_eof33: cs = 33; goto _test_eof; 
+	_test_eof34: cs = 34; goto _test_eof; 
+	_test_eof35: cs = 35; goto _test_eof; 
+	_test_eof36: cs = 36; goto _test_eof; 
+	_test_eof37: cs = 37; goto _test_eof; 
+	_test_eof38: cs = 38; goto _test_eof; 
+	_test_eof39: cs = 39; goto _test_eof; 
+	_test_eof40: cs = 40; goto _test_eof; 
+	_test_eof41: cs = 41; goto _test_eof; 
+	_test_eof42: cs = 42; goto _test_eof; 
+	_test_eof43: cs = 43; goto _test_eof; 
+	_test_eof44: cs = 44; goto _test_eof; 
+	_test_eof45: cs = 45; goto _test_eof; 
+	_test_eof46: cs = 46; goto _test_eof; 
+	_test_eof47: cs = 47; goto _test_eof; 
+	_test_eof48: cs = 48; goto _test_eof; 
+	_test_eof49: cs = 49; goto _test_eof; 
+	_test_eof50: cs = 50; goto _test_eof; 
+	_test_eof51: cs = 51; goto _test_eof; 
+	_test_eof52: cs = 52; goto _test_eof; 
+	_test_eof53: cs = 53; goto _test_eof; 
+	_test_eof54: cs = 54; goto _test_eof; 
+	_test_eof55: cs = 55; goto _test_eof; 
+	_test_eof56: cs = 56; goto _test_eof; 
 
+	_test_eof: {}
 	_out: {}
 	}
-#line 109 "http11_parser.rl"
 
-  parser->cs = cs;
+#line 109 "ext/http11/http11_parser.rl"
+
+  if (!http_parser_has_error(parser))
+    parser->cs = cs;
   parser->nread += p - (buffer + off);
 
   assert(p <= pe && "buffer overflow after parsing execute");
@@ -1182,27 +1207,11 @@ case 56:
   assert(parser->field_len <= len && "field has length longer than whole buffer");
   assert(parser->field_start < len && "field starts after buffer end");
 
-  if(parser->body_start) {
-    /* final \r\n combo encountered so stop right here */
-    
-#line 1189 "http11_parser.c"
-#line 123 "http11_parser.rl"
-    parser->nread++;
-  }
-
   return(parser->nread);
 }
 
 int http_parser_finish(http_parser *parser)
 {
-  int cs = parser->cs;
-
-  
-#line 1202 "http11_parser.c"
-#line 134 "http11_parser.rl"
-
-  parser->cs = cs;
-
   if (http_parser_has_error(parser) ) {
     return -1;
   } else if (http_parser_is_finished(parser) ) {
